feat: reorganized assets, added Images folders, updated components, and cleaned old files

--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,35 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+node_modules/
+
+# Build output
+dist/
+dist-ssr/
+
+# Local environment files
 *.local
+.env
+.env.*.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Optional OS files
+Thumbs.db
+
+# Zip or unwanted binary files
+*.zip
+
+# Temporary files
+.tmp
+.cache
